[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AlgorithmsForEveryone"
version = "0.1.0"
description = "A collection of high-performance data structures and algorithms in Python."
authors = [
    { name = "MihaiStreames" },
    { name = "[Name2]" },
    { name = "[Name3]" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/MihaiStreames/AlgorithmsForEveryone"
Documentation = "https://to-add.com"

[tool.setuptools.packages.find]
where = ["src"]
